# datallm

./: .gitignore  LICENSE
datallm-client/: CHANGELOG.md  Makefile  README.md  pyproject.toml
datallm-client/datallm/: __init__.py  _base_client.py  _client.py  _pd_utils.py  _resources.py  _types.py
datallm-client/tests/datallm/: test_pd_utils.py
datallm-engine/: Dockerfile  README.md  pyproject.toml
datallm-engine/datallm_engine/: config.py  engine.py  types.py
datallm-engine/datallm_engine/entrypoints/api_server/: serve.py
datallm-engine/datallm_engine/entrypoints/modal/: image.py  serve.py
datallm-server/: Dockerfile  README.md  pyproject.toml
datallm-server/datallm_server/: coerce.py  engine_types.py  main.py  modal_engine.py  prompt.py  regex.py
datallm-server/tests/: test_coerce_dtypes.py  test_engine_request.py  test_model_validation.py  test_regex.py
datallm-utils/: README.md  kaggle-datasets-with-license.csv  requirements.txt  step1_create_data_plus_meta.py  step2_create_instruct_dataset.py  step3_finetune_llm_model.py
