[tool.poetry]
name = "datallm-engine"
version = "0.1.0"
description = "Modal deployment of VLLM with our internal fine-tuned LLM"
authors = ["MOSTLY AI <office@mostly.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.14"


[tool.poetry.group.modal.dependencies]
modal = "^0.61.58"

[tool.ruff]
# Enable the isort rules.
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
