[tool.poetry]
name = "datallm-server"
version = "0.1.0"
description = "Server that processes and forwards requests to serving engine."
authors = ["MOSTLY AI <office@mostly.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
httpx = "^0.27.0"
modal = "^0.61.79"
interegular = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.14"


[tool.ruff]
# Enable the isort rules.
extend-select = ["I"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
